Replace blacklist with blocklist

--- a/anaconda_linter/config.yaml
+++ b/anaconda_linter/config.yaml
@@ -1,5 +1,5 @@
 requirements: requirements.txt
-blacklists:
-    - build-fail-blacklist
+blocklists:
+    - build-fail-blocklist
 channels:
     - defaults
