--- a/tests/bad-feedstock/recipe/meta.yaml
+++ b/tests/bad-feedstock/recipe/meta.yaml
@@ -11,7 +11,6 @@ source:
         - fortran_regex.patch
         - gfortran_alias.patch
         - mklfft.patch
-    sha256: 956afdeb9b5600e873326e410e9379684dac8f8f47ea569151a417984e7799cf
     url: https://github.com/numpy/numpy/archive/v1.11.3.tar.gz
 build:
     number: '4'
@@ -28,10 +27,11 @@ requirements:
         - gfortran_linux-64 7.2.0 25
         - libgfortran-ng 7.2.0 h9f7466a_2
         - libstdcxx-ng 7.2.0 h7a57d05_2
+        - llvm
     host:
         - ca-certificates 2017.08.26 h1d4fec5_0
         - certifi 2018.1.18 py36_0
-        - cython 0.27.3 py36h1860423_0
+        - {{ compiler('cxx') }}
         - intel-openmp 2018.0.0 hc7b2577_8
         - libedit 3.1 heed3624_0
         - libffi 3.2.1 hd88cf55_4
@@ -45,13 +45,14 @@ requirements:
         - openssl 1.0.2n hb7f436b_0
         - python 3.6.4 hc3d631a_1
         - readline 7.0 ha6073c6_4
-        - setuptools 38.5.1 py36_0
         - sqlite 3.22.0 h1bed415_0
         - tk 8.6.7 hc745277_3
         - xz 5.2.3 h55aa19d_2
         - zlib 1.2.11 ha838bed_2
     run:
-        - libgcc-ng >=7.2.0
+        - cython 0.27.3 py36h1860423_0
+        - setuptools 38.5.1 py36_0
+        - libgcc-ng>=7.2.0
         - libgfortran-ng  >=7,<8.0a0
         - mkl
         - python >=3.6,<3.7.0a0
