--- a/environment.yaml
+++ b/environment.yaml
@@ -8,11 +8,17 @@ dependencies:
   - setuptools
   # run
   - ruamel.yaml
+  - pyyaml
   - license-expression
   - jinja2
+  - tqdm
+  - conda-build
+  - jsonschema
+  - networkx
   # test
   - make
   - pytest
+  - pre-commit
   # plug ins
   - pytest-cov
   - pytest-html
