--- a/tests/good-feedstock/recipe/meta.yaml
+++ b/tests/good-feedstock/recipe/meta.yaml
@@ -69,12 +69,11 @@ about:
   license: LicenseRef-PIL
   license_family: Other
   license_file: LICENSE
-  license_url: https://raw.githubusercontent.com/python-pillow/Pillow/main/LICENSE
   summary: Pillow is the friendly PIL fork by Alex Clark and Contributors
   description: |
     Pillow is the friendly PIL fork. PIL is the Python Imaging Library,
     adds image processing capabilities to your Python interpreter.
-  doc_url: https://pillow.readthedocs.io/en/stable/
+  doc_url: https://pillow.readthedocs.io/en/4.2.x/
   doc_source_url: https://github.com/python-pillow/Pillow/blob/4.2.x/docs/index.rst
   dev_url: https://github.com/python-pillow/Pillow
 
