Make module installable

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Run tests
         run: |
           source $CONDA/bin/activate
-          conda activate conda-lint
+          conda activate anaconda-linter
           make test
       - name: Archive CI Artefacts
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
