Add linting job to CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,11 @@ jobs:
           source $CONDA/bin/activate
           conda activate anaconda-linter
           make test
+      - name: Lint conda recipe
+        run: |
+          source $CONDA/bin/activate
+          conda activate anaconda-linter
+          python anaconda_linter/run.py ./anaconda_linter/data/ ./conda.recipe/
       - name: Archive CI Artefacts
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8
         with:
