Add license_url to good feedstock

--- a/tests/good-feedstock/recipe/meta.yaml
+++ b/tests/good-feedstock/recipe/meta.yaml
@@ -69,6 +69,7 @@ about:
   license: LicenseRef-PIL
   license_family: Other
   license_file: LICENSE
+  license_url: https://github.com/python-pillow/Pillow/blob/main/LICENSE
   summary: Pillow is the friendly PIL fork by Alex Clark and Contributors
   description: |
     Pillow is the friendly PIL fork. PIL is the Python Imaging Library,
