--- a/tests/good-feedstock/recipe/meta.yaml
+++ b/tests/good-feedstock/recipe/meta.yaml
@@ -74,7 +74,7 @@ about:
   description: |
     Pillow is the friendly PIL fork. PIL is the Python Imaging Library,
     adds image processing capabilities to your Python interpreter.
-  doc_url: https://pillow.readthedocs.io/en/4.2.x/
+  doc_url: https://pillow.readthedocs.io/en/stable/
   doc_source_url: https://github.com/python-pillow/Pillow/blob/4.2.x/docs/index.rst
   dev_url: https://github.com/python-pillow/Pillow
 
