--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           source $CONDA/bin/activate
           conda activate base
-          conda build conda.recipe --croot ./pkgs -c conda-forge
+          conda build recipe --croot ./pkgs -c conda-forge
       - name: Upload Package
         env:
           ANACONDA_ORG_TOKEN: ${{ secrets.ANACONDA_ORG_TOKEN }}
