--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,3 +30,16 @@ test:
     - pytest-html
   commands:
     - python -m pytest -vv tests
+about:
+  home: https://github.com/anaconda-distribution/anaconda-linter
+  license: BSD-3-Clause
+  license_family: BSD
+  license_file: LICENSE
+  summary: An internal linter to validate package recipes/meta.yaml files.
+  description: >
+    Anaconda-linter is an internal tool developed to validate conda packages'
+    meta.yaml files, to ensure that they are mostly complete prior to trying
+    to build the package. This tool can be integrated into a development flow
+    to cut down on manual testing and verification of package files.
+  doc_url: https://github.com/anaconda-distribution/anaconda-linter/blob/main/README.md
+  dev_url: https://github.com/anaconda-distribution/anaconda-linter
