--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,3 +43,6 @@ about:
     to cut down on manual testing and verification of package files.
   doc_url: https://github.com/anaconda-distribution/anaconda-linter/blob/main/README.md
   dev_url: https://github.com/anaconda-distribution/anaconda-linter
+extra:
+  skip-lints:
+    - invalid_url
