--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,9 @@
 include AUTHORS.rst
 include LICENSE
 include README.md
+include CHANGELOG.md
 
-recursive-include tests *
+recursive-include tests *.py
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
