--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,10 @@ target-version = ['py37', 'py38', 'py39']
 profile = "black"
 line_length = 100
 src_paths = ["anaconda_linter"]
++
+[tool.pytest.ini_options]
+filterwarnings = [
+    # Skip PendingDeprecationWarning from conda-build
+    "ignore:.*`conda\\.exports\\.memoized`.*:PendingDeprecationWarning",
+    "ignore:.*`conda\\._vendor\\.toolz`.*:PendingDeprecationWarning",
+]
