Skip anacona_linter/run.py for coverage reports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ filterwarnings = [
     "ignore:.*`conda\\.exports\\.memoized`.*:PendingDeprecationWarning",
     "ignore:.*`conda\\._vendor\\.toolz`.*:PendingDeprecationWarning",
 ]
+
+[tool.coverage.run]
+omit = [
+    "anaconda_linter/run.py",
+]
