--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,6 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: make
+  - init: bash get.sh
 
 
