--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,5 +4,10 @@
 
 tasks:
   - before: bash get.sh
+    init: make environment
+  - name: Linter-Env
+    command: conda activate anaconda-linter
+    openMode: split-right
+
 
 
