--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,3 +14,4 @@ tasks:
       eval "$('/workspace/miniconda3/bin/conda' 'shell.bash' 'hook' 2> /dev/null)"
       make environment
       conda activate anaconda-linter
+  - init: bash test_on_recipes.sh
