--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,10 +38,11 @@ test:
     - pytest
   imports:
     - anaconda_linter
+    - anaconda_linter.lint
   commands:
     - pip check
     # lint_list is only an important test for development
-    - python -m pytest -vv tests -k "not lint_list"
+    - python -m pytest tests -k "not lint_list"
 
 about:
   home: https://github.com/anaconda-distribution/anaconda-linter
