--- a/.github/workflows/license_cron.yaml
+++ b/.github/workflows/license_cron.yaml
@@ -26,6 +26,6 @@ jobs:
         uses: peter-evans/create-pull-request@671dc9c9e0c2d73f07fa45a3eb0220e1622f0c5f # tag=v4
         with:
           title: Update Licenses and Exceptions
-          branch-suffix: TESTING
+          branch-suffix: random
           draft: false
           add-paths: 'anaconda_linter/data/*.txt'
