TOC + Usage automation to `README.md`
**Changes**
- Adds `markdown-toc` plugin to automatically update a Table of Contents in
  the `README.md` file
- In a similar vein, adds a new custom `README.md` modifier that looks for
  changes in the `run.py` and updates the usage message automatically
  - This script has been tested to ensure stability in these cases:
    - Required header comments are missing
    - Usage message has been deleted
    - Usage message already exists and `run.py` has been changed
- Enables `verbose` mode for `make pre-commit`. IMO this makes it easier to
  tell when a `pre-commit` failure is a real failure vs when it has changed
  the file. The two new pre-commit rules always fail when their respective
  files are editted. Arguably that's by design and not really an error, and
  verbose mode states that the files have been modified.

**Issues Encountered**
- The multi-line editing command in `sed` varies between POSIX and GNU versions
  of `sed` significantly so what was going to be a quick and dirty shell script
  turned into a python script instead. This did have the advanatage of being
  able to query the usage message string directly from `run.py`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-# Apply to all files without commiting:
+# Apply to all files without committing:
 #   pre-commit run --all-files
 # Update this file:
 #   pre-commit autoupdate
@@ -59,3 +59,15 @@ repos:
   hooks:
   -   id: bandit
       files: '^gh-bridge/ghpeb/webhook.py'
+- repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
+  rev: v1.1.2
+  hooks:
+  - id: markdown-toc
+- repo: local
+  hooks:
+  - id: update_usage
+    name: update_usage
+    entry: ./scripts/update_usage.py
+    language: system
+    files: 'run.py'
+    types: [python]
