--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,60 +2,61 @@
 #   pre-commit run --all-files
 # Update this file:
 #   pre-commit autoupdate
-exclude: ^(.*/versioneer\.py|.*/_version\.py|.*/.*\.svg)
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-    -   id: check-added-large-files
-    -   id: check-ast
-    -   id: fix-byte-order-marker
-    -   id: check-case-conflict
-    -   id: check-executables-have-shebangs
-    -   id: check-merge-conflict
-    -   id: check-shebang-scripts-are-executable
-    -   id: check-yaml
+      - id: check-added-large-files
+      - id: check-ast
+      - id: fix-byte-order-marker
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: check-merge-conflict
+      - id: check-shebang-scripts-are-executable
+      - id: check-yaml
         exclude: (anaconda_linter/data/conda_build_config.yaml|tests/bad-feedstock/recipe/meta.yaml|tests/good-feedstock/recipe/meta.yaml|recipe/meta.yaml)
-    -   id: debug-statements
-    -   id: detect-private-key
-    -   id: end-of-file-fixer
-    -   id: mixed-line-ending
-    -   id: trailing-whitespace
--   repo: https://github.com/PyCQA/isort
+      - id: debug-statements
+      - id: detect-private-key
+      - id: end-of-file-fixer
+      - id: mixed-line-ending
+      - id: trailing-whitespace
+  - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
-    -   id: isort
--   repo: https://github.com/psf/black
+      - id: isort
+  - repo: https://github.com/psf/black
     rev: 23.9.1
     hooks:
-    -   id: black
--   repo: https://github.com/asottile/pyupgrade
+      - id: black
+  - repo: https://github.com/asottile/pyupgrade
     rev: v3.11.0
     hooks:
-    -   id: pyupgrade
+      - id: pyupgrade
         args: [--py37-plus, --keep-runtime-typing]
--   repo: https://github.com/pycqa/flake8
+  - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
     hooks:
-    -   id: flake8
-- repo: https://github.com/lovesegfault/beautysh
-  rev: v6.2.1
-  hooks:
-  - id: beautysh
-- repo: https://github.com/koalaman/shellcheck-precommit
-  rev: v0.9.0
-  hooks:
-  - id: shellcheck
-- repo: local
-  hooks:
-  - id: packer_fmt
-    name: Packer Format
-    entry: .github/packer-fmt.sh
-    language: system
-    files: (\.pkr\.hcl)$
-    pass_filenames: true
-- repo: https://github.com/PyCQA/bandit
-  rev: 1.7.5
-  hooks:
-  -   id: bandit
-      files: '^gh-bridge/ghpeb/webhook.py'
+      - id: flake8
+  - repo: https://github.com/lovesegfault/beautysh
+    rev: v6.2.1
+    hooks:
+      - id: beautysh
+  - repo: https://github.com/koalaman/shellcheck-precommit
+    rev: v0.9.0
+    hooks:
+      - id: shellcheck
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.26.3
+    hooks:
+      - id: check-github-actions
+      - id: check-github-workflows
+      - id: check-renovate
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.2.5
+    hooks:
+      - id: codespell
+        args: [--write]
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      - id: check-useless-excludes
