--- a/environment.yaml
+++ b/environment.yaml
@@ -8,7 +8,7 @@ dependencies:
   - setuptools
   - pip
   # run
-  - percy ==0.0.5
+  - percy >=0.1.0,<0.2.0
   - ruamel.yaml
   - license-expression
   - jinja2
