--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@
 #   pre-commit run --all-files
 # Update this file:
 #   pre-commit autoupdate
+exclude: tests/test_aux_files/.*
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
