--- a/.github/actions/setup-env/action.yaml
+++ b/.github/actions/setup-env/action.yaml
@@ -4,12 +4,18 @@ description: Set up an anaconda-linter environment
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v4.1.1
+    - uses: actions/setup-python@v4.7.1
+      with:
+        python-version: '3.9'
+        cache: 'pip'
     - name: Cache conda env
       id: cache-conda
       uses: actions/cache@v3.3.2
       env:
         cache-name: conda-env-cache
       with:
+        cache: 'pip'
         path: '/usr/share/miniconda/envs'
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/environment.yml') }}
         restore-keys: |
@@ -17,6 +23,7 @@ runs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
     - name: Create Environment
+      shell: bash
       if: ${{ steps.cache-conda.outputs.cache-hit == false }}
       run: |
         conda update -n base -c defaults conda
@@ -25,4 +32,3 @@ runs:
         conda env create -f environment.yaml --name anaconda-linter --force
         conda run --name anaconda-linter pip install .
         conda activate anaconda-linter
-      shell: bash
