--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,11 +11,13 @@ jobs:
   pre-commit:
       runs-on: ubuntu-latest
       steps:
+        - uses: actions/checkout@v4.1.1
         - uses: ./.github/actions/setup-env
         - uses: pre-commit/action@v3.0.0
   tests:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4.1.1
       - uses: ./.github/actions/setup-env
       - name: Run tests
         run: |
@@ -50,6 +52,7 @@ jobs:
   lint-recipe:
       runs-on: ubuntu-latest
       steps:
+        - uses: actions/checkout@v4.1.1
         - uses: ./.github/actions/setup-env
         - name: Run lint
           run: |
