--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,26 +8,13 @@ on:
 name: Test
 
 jobs:
+  # NOTE: Tests run via `pre-commit`
   pre-commit:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v4.1.1
         - uses: ./.github/actions/setup-env
         - uses: pre-commit/action@v3.0.0
-  tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4.1.1
-      - uses: ./.github/actions/setup-env
-      - name: Run tests
-        run: |
-          make test
-      - name: Archive CI Artefacts
-        uses: actions/upload-artifact@v3.1.3
-        with:
-          name: ci-artifacts
-          path: artifacts/**
-          retention-days: 5
   build-recipe:
       runs-on: ubuntu-latest
       steps:
@@ -56,5 +43,6 @@ jobs:
         - uses: ./.github/actions/setup-env
         - name: Run lint
           run: |
+            conda activate anaconda-linter
             OUTPUT=`conda-lint .`
             [[ ${OUTPUT} == "All checks OK" ]] || exit 1
