--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.1.1" %}
+{% set version = "0.1.2" %}
 
 package:
   name: anaconda-linter
@@ -64,3 +64,4 @@ about:
 extra:
   recipe-maintainers:
     - marcoesters
+    - schuylermartin45
