Out of an abundance of caution, bump the `percy` version
- In theory, this will ensure we will get the version from `distro-tooling` and
  not an older copy on `defaults`

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - conda-build
     - jsonschema
     - networkx
-    - distro-tooling::percy >=0.1.0,<0.2.0
+    - percy >=0.1.1,<0.2.0
 
 test:
   source_files:
