--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
           run: |
             source $CONDA/bin/activate
             conda install conda-build
-            conda-build .
+            conda-build -c distro-tooling .
   lint-recipe:
       runs-on: ubuntu-latest
       steps:
