--- a/environment.yaml
+++ b/environment.yaml
@@ -10,6 +10,7 @@ dependencies:
   - make
   # run
   - distro-tooling::percy >=0.1.1,<0.2.0
+  - distro-tooling::anaconda-packaging-utils
   - ruamel.yaml
   - license-expression
   - jinja2
