--- a/environment.yaml
+++ b/environment.yaml
@@ -14,6 +14,7 @@ dependencies:
   - ruamel.yaml
   - license-expression
   - jinja2
+  - py-lief  # Added to resolve bug in conda-build 3.28.0
   - conda-build
   - jsonschema
   - networkx
