--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,10 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+          with:
+            repository: AnacondaRecipes/anaconda-linter-feedstock
+            path: ./feedstock
         - name: Cache conda env
           id: cache-conda
           uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
@@ -37,6 +41,7 @@ jobs:
               ${{ runner.os }}-
         - name: Build package
           run: |
+            cp -r ./feedstock/abs.yaml ./feedstock/recipe .
             source $CONDA/bin/activate
             conda install conda-build
             conda-build -c distro-tooling .
@@ -49,5 +54,4 @@ jobs:
           run: |
             source $CONDA/bin/activate
             conda activate anaconda-linter
-            OUTPUT=`conda-lint .`
-            [[ ${OUTPUT} == "All checks OK" ]] || exit 1
+            conda-lint .
