--- a/environment.yaml
+++ b/environment.yaml
@@ -14,8 +14,7 @@ dependencies:
   - ruamel.yaml
   - license-expression
   - jinja2
-  - py-lief  # Added to resolve bug in conda-build 3.28.0
-  - conda-build
+  - conda-build <3.28.0 # Pinned to resolve bug in conda-build 3.28.0
   - jsonschema
   - networkx
   - requests
