--- a/.github/actions/setup-env/action.yaml
+++ b/.github/actions/setup-env/action.yaml
@@ -6,7 +6,7 @@ runs:
   steps:
     - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
       with:
-        python-version: '3.9'
+        python-version: ${{ inputs.python-version }}
         cache: 'pip'
     - name: Cache conda env
       id: cache-conda
