--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,8 @@ jobs:
       steps:
         - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         - uses: ./.github/actions/setup-env
+          with:
+            python-version: "3.11"
         # Executes `pre-commit` with the `make` directive to ensure all dependencies are found
         - run: |
             source $CONDA/bin/activate
