--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
       name: Test on ${{ matrix.python-version }}
       strategy:
         matrix:
-          python-version: ["3.8", "3.9", "3.10"]
+          python-version: ["3.9", "3.10"]
       steps:
         - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         - uses: ./.github/actions/setup-env
