sed replace python version to setup environments

--- a/.github/actions/setup-env/action.yaml
+++ b/.github/actions/setup-env/action.yaml
@@ -25,13 +25,11 @@ runs:
       shell: bash
       if: ${{ steps.cache-conda.outputs.cache-hit == false }}
       # We override the version of Python specified in our `environment.yaml` file to simulate using older versions
-      # of Python, if the project is used as a dependency elsewhere. To simulate this, we uninstall and re-install the
-      # targeted version manually.
+      # of Python.
       run: |
         conda update -n base -c defaults conda
         source $CONDA/etc/profile.d/conda.sh
         conda init bash
+        sed -i 's/- python$/- python ==${{ inputs.python-version }}/' environment.yaml
         conda env create -f environment.yaml --name anaconda-linter --force
         conda run --name anaconda-linter pip install .
-        conda remove --name anaconda-linter python
-        conda install --name anaconda-linter python=${{ inputs.python-version }}
