--- a/.github/actions/setup-env/action.yaml
+++ b/.github/actions/setup-env/action.yaml
@@ -24,12 +24,11 @@ runs:
     - name: Create Environment
       shell: bash
       if: ${{ steps.cache-conda.outputs.cache-hit == false }}
-      # We override the version of Python specified in our `environment.yaml` file to simulate using older versions
-      # of Python.
+      # NOTE: We use `sed` to force a Python version in the `environment.yaml` file
       run: |
         conda update -n base -c defaults conda
         source $CONDA/etc/profile.d/conda.sh
         conda init bash
-        sed -i 's/- python$/- python ==${{ inputs.python-version }}/' environment.yaml
+        sed -i 's/- python >=3.*$/- python ${{ inputs.python-version }}.*/' environment.yaml
         conda env create -f environment.yaml --name anaconda-linter --force
         conda run --name anaconda-linter pip install .
