More changes to move towards a library-friendly call system
- Removes printing from the library-callable function
- Removes needing a file to be read-in to run the linter
  - TODO: I fear there are more of these hidden

--- a/.pytest.ini
+++ b/.pytest.ini
@@ -1,6 +1,5 @@
 # This surpresses deprecation `pytest` warnings related to using `conda.*` packages.
-# TODO Future: remove/upgrade deprecated packages
 [pytest]
 filterwarnings =
-    ignore:conda.* is pending deprecation:PendingDeprecationWarning
-    ignore:conda.* is deprecated:DeprecationWarning
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
