--- a/.github/actions/setup-env/action.yaml
+++ b/.github/actions/setup-env/action.yaml
@@ -30,5 +30,6 @@ runs:
         source $CONDA/etc/profile.d/conda.sh
         conda init bash
         sed -i 's/- python >=3.*$/- python ${{ inputs.python-version }}.*/' environment.yaml
+        if [[ -e  /usr/share/miniconda/envs/anaconda-linter ]]; then rm -rf /usr/share/miniconda/envs/anaconda-linter; fi
         conda env create -f environment.yaml --name anaconda-linter
         conda run --name anaconda-linter pip install .
