--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,35 +4,42 @@ on:
       - main
   pull_request:
 
-
 name: Test
 
 jobs:
   # NOTE: Tests run via `pre-commit`
   pre-commit:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        - uses: ./.github/actions/setup-env
-          with:
-            python-version: "3.11"
-        # Executes `pre-commit` with the `make` directive to ensure all dependencies are found
-        - run: |
-            source $CONDA/bin/activate
-            conda activate anaconda-linter
-            make pre-commit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: ./.github/actions/setup-env
+        with:
+          python-version: "3.11"
+      # Executes `pre-commit` with the `make` directive to ensure all dependencies are found
+      - run: |
+          source $CONDA/bin/activate
+          conda activate anaconda-linter
+          make pre-commit
   test:
-      runs-on: ubuntu-latest
-      name: Test on ${{ matrix.python-version }}
-      strategy:
-        matrix:
-          python-version: ["3.11"] # TODO: Bump this to 3.12 when supported and drop 3.11 (covered in pre-commit)
-      steps:
-        - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        - uses: ./.github/actions/setup-env
-          with:
-            python-version: ${{ matrix.python-version }}
-        - run: |
-            source $CONDA/bin/activate
-            conda activate anaconda-linter
-            make test
+    runs-on: ubuntu-latest
+    name: Test on ${{ matrix.python-version }}
+    strategy:
+      matrix:
+        python-version: ["3.11"] # TODO: Bump this to 3.12 when supported and drop 3.11 (covered in pre-commit)
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: ./.github/actions/setup-env
+        with:
+          python-version: ${{ matrix.python-version }}
+      - run: |
+          source $CONDA/bin/activate
+          conda activate anaconda-linter
+          make test
+  build-recipe:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          source $CONDA/bin/activate
+          conda create --name build-env -y python=3.11 conda-build
+          conda activate build-env
+          conda build -c defaults recipe/meta.yaml
