--- a/anaconda_linter/data/cbc_linux-aarch64.yaml
+++ b/anaconda_linter/data/cbc_linux-aarch64.yaml
@@ -2,6 +2,7 @@ arch: aarch64       # ppc64le aarch64 ppc64 s390x win
 platform: linux  # linux os win
 target_platform: linux-aarch64
 build_platform: linux-aarch64
+c_stdlib: sysroot
 ccache_method: None
 lang_c: gcc
 lang_cxx: gxx
