--- a/anaconda_linter/data/cbc_linux-s390x.yaml
+++ b/anaconda_linter/data/cbc_linux-s390x.yaml
@@ -2,6 +2,7 @@ arch: s390x       # ppc64le aarch64 ppc64 s390x win
 platform: linux  # linux os win
 target_platform: linux-s390x
 build_platform: linux-s390x
+c_stdlib: sysroot
 ccache_method: None
 lang_c: gcc
 lang_cxx: gxx
