--- a/anaconda_linter/data/cbc_osx-64.yaml
+++ b/anaconda_linter/data/cbc_osx-64.yaml
@@ -2,6 +2,7 @@ arch: 64       # ppc64le aarch64 ppc64 s390x win
 platform: osx # linux os win
 target_platform: osx-64
 build_platform: osx-64
+c_stdlib: macosx_deployment_target
 ccache_method: None
 lang_c: clang
 lang_cxx: clangxx
