--- a/anaconda_linter/data/cbc_win-64.yaml
+++ b/anaconda_linter/data/cbc_win-64.yaml
@@ -1,12 +1,13 @@
 arch: 64       # ppc64le aarch64 ppc64 s390x win
 platform: win  # linux os win
-c_compiler: vs2017
+c_compiler: vs2019
+c_stdlib: vs
 vc: 14
 target_platform: win-64
 build_platform: win-32
 ccache_method: None
-lang_c: vs2017
-lang_cxx: vs2017
+lang_c: vs2019
+lang_cxx: vs2019
 lang_vc: 14
 lang_fortran: gfortran
 win: 1
