--- a/environment.yaml
+++ b/environment.yaml
@@ -15,7 +15,7 @@ dependencies:
   - license-expression
   - jinja2
   - conda-build
-  - conda-recipe-manager
+  - conda-recipe-manager >=0.6.1
   - jsonschema
   - networkx
   - requests
