add skip update

--- a/tests/test_aux_files/auto_fix/avoid_noarch_fixed.yaml
+++ b/tests/test_aux_files/auto_fix/avoid_noarch_fixed.yaml
@@ -8,6 +8,7 @@ outputs:
   - name: test_output
     build:
       number: 0
+      skip: true  # [py<311]
     requirements:
       host:
         - python
