added python version to root in autofix test case

--- a/tests/test_aux_files/auto_fix/avoid_noarch.yaml
+++ b/tests/test_aux_files/auto_fix/avoid_noarch.yaml
@@ -6,6 +6,12 @@ build:
   number: 0
   noarch: python
 
+requirements:
+  host:
+    - setuptools
+  run:
+    - python >=3.10
+
 outputs:
   - name: test_output
     build:
