improve implementation of check, fix and testing

--- a/tests/test_aux_files/auto_fix/no_git_on_windows_fixed.yaml
+++ b/tests/test_aux_files/auto_fix/no_git_on_windows_fixed.yaml
@@ -35,6 +35,12 @@ requirements:
     - fsspec
     - packaging
 
+outputs:
+  - name: output1
+    requirements:
+      build:
+        - git  # [not osx-arm64 and not win]
+
 test:
   imports:
     - fastparquet
