add occurences to auto_fix check

--- a/tests/test_aux_files/auto_fix/avoid_noarch_fixed.yaml
+++ b/tests/test_aux_files/auto_fix/avoid_noarch_fixed.yaml
@@ -14,7 +14,7 @@ requirements:
     - python
 
 outputs:
-  - name: test_output
+  - name: test_output_1
     build:
       number: 1
       noarch: python
@@ -22,6 +22,18 @@ outputs:
       host:
       run:
         - python >=3.11
+  - name: test_output_2
+    build:
+      number: 0
+      skip: true  # [py<39]
+    requirements:
+      host:
+        - python
+      run:
+        - python
+    test:
+      requires:
+        - python
 
 test:
   requires:
