--- a/tests/test_aux_files/auto_fix/avoid_noarch.yaml
+++ b/tests/test_aux_files/auto_fix/avoid_noarch.yaml
@@ -13,7 +13,7 @@ requirements:
     - python >=3.10
 
 outputs:
-  - name: test_output
+  - name: test_output_1
     build:
       number: 1
       noarch: python
@@ -21,3 +21,11 @@ outputs:
       host:
       run:
         - python >=3.11
+  - name: test_output_2
+    build:
+      number: 0
+      noarch: python
+    requirements:
+      host:
+      run:
+        - python >=3.9
