add build/script in output case

--- a/tests/test_aux_files/auto_fix/pip_install_args_fixed.yaml
+++ b/tests/test_aux_files/auto_fix/pip_install_args_fixed.yaml
@@ -19,7 +19,8 @@ outputs:
       host:
         - pip
   - name: output2
-    script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation
+    build:
+      script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation
     requirements:
       host:
         - pip
