--- a/tests/test_aux_files/auto_fix/pip_install_args.yaml
+++ b/tests/test_aux_files/auto_fix/pip_install_args.yaml
@@ -19,7 +19,8 @@ outputs:
       host:
         - pip
   - name: output2
-    script: {{ PYTHON }} -m pip install . --no-build-isolation
+    build:
+      script: {{ PYTHON }} -m pip install . --no-build-isolation
     requirements:
       host:
         - pip
