apply to any compiler

--- a/tests/test_aux_files/should_use_stdlib/stdlib_missing_multi.yaml
+++ b/tests/test_aux_files/should_use_stdlib/stdlib_missing_multi.yaml
@@ -10,8 +10,8 @@ outputs:
   - name: output1
     requirements:
       build:
-        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
   - name: output2
     requirements:
       build:
-        - {{ compiler('c') }}
+        - {{ compiler('fortran') }}
