update patch_unnecessary auto-fix data

--- a/tests/test_aux_files/auto_fix/patch_unnecessary.yaml
+++ b/tests/test_aux_files/auto_fix/patch_unnecessary.yaml
@@ -33,6 +33,9 @@ requirements:
     - numpy {{ numpy }}
     - cython 0.29
     - pytest-runner
+    - patch
+    - m2-patch
+    - msys2-patch
   run:
     - python
     - {{ pin_compatible('numpy') }}
