--- a/tests/test_aux_files/msys2_must_be_in_build/all_in_build_multi.yaml
+++ b/tests/test_aux_files/msys2_must_be_in_build/all_in_build_multi.yaml
@@ -9,6 +9,11 @@ requirements:
     - msys2-flex
     - msys2-patch
     - msys2-posix
+    - ucrt64-bzip2
+    - ucrt64-gcc-ada
+    - ucrt64-gcc-toolchain
+    - ucrt64-xz
+    - ucrt64-zlib
 
 outputs:
   - name: output1
@@ -19,6 +24,11 @@ outputs:
         - msys2-flex
         - msys2-patch
         - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
   - name: output2
     requirements:
       build:
@@ -27,3 +37,8 @@ outputs:
         - msys2-flex
         - msys2-patch
         - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
