--- a/tests/test_aux_files/msys2_must_be_in_build/all_in_host_and_run.yaml
+++ b/tests/test_aux_files/msys2_must_be_in_build/all_in_host_and_run.yaml
@@ -9,9 +9,19 @@ requirements:
     - msys2-flex
     - msys2-patch
     - msys2-posix
+    - ucrt64-bzip2
+    - ucrt64-gcc-ada
+    - ucrt64-gcc-toolchain
+    - ucrt64-xz
+    - ucrt64-zlib
   run:
     - msys2-bison
     - msys2-diffutils
     - msys2-flex
     - msys2-patch
     - msys2-posix
+    - ucrt64-bzip2
+    - ucrt64-gcc-ada
+    - ucrt64-gcc-toolchain
+    - ucrt64-xz
+    - ucrt64-zlib
