reworked missing_description test with new test files

--- a/tests/test_aux_files/lint_check/about/about_multi_output_empty_root_and_all_outputs.yaml
+++ b/tests/test_aux_files/lint_check/about/about_multi_output_empty_root_and_all_outputs.yaml
@@ -72,6 +72,17 @@ test:
   commands:
     - pip check
     - test -f $SP_DIR/toml-stubs/__init__.pyi  # [unix]
+
+about:
+  home:
+  summary:
+  description:
+  license:
+  license_file:
+  license_family:
+  dev_url:
+  doc_url:
+
 extra:
   recipe-maintainers:
     - fhoehle
