--- a/tests/test_aux_files/lint_check/description/description_empty_with_literal.yaml
+++ b/tests/test_aux_files/lint_check/description/description_empty_with_literal.yaml
@@ -41,7 +41,8 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  description:
+  description: |
+  
   doc_url: https://github.com/randyzwitch/streamlit-folium/blob/master/README.md
   dev_url: https://github.com/randyzwitch/streamlit-folium
 
