add m2, m2w64 detection and testing

--- a/tests/test_aux_files/msys2_for_windows_only/all_msys2_ucrt64_on_win.yaml
+++ b/tests/test_aux_files/msys2_for_windows_only/all_msys2_ucrt64_on_win.yaml
@@ -8,3 +8,6 @@ requirements:
     - msys2-posix # [win]
     - ucrt64-gcc-toolchain  # [win]
     - ucrt64-xz  # [win]
+    - posix # [win]
+    - m2-patch # [win]
+    - m2w64-toolchain # [win]
