--- a/tests/test_aux_files/msys2_for_windows_only/some_msys2_ucrt64_on_non_win.yaml
+++ b/tests/test_aux_files/msys2_for_windows_only/some_msys2_ucrt64_on_non_win.yaml
@@ -8,3 +8,6 @@ requirements:
     - msys2-posix # [win]
     - ucrt64-gcc-toolchain
     - ucrt64-xz
+    - posix
+    - m2-patch
+    - m2w64-toolchain
