--- a/tests/test_aux_files/msys2_for_windows_only/some_msys2_ucrt64_on_non_win_multi.yaml
+++ b/tests/test_aux_files/msys2_for_windows_only/some_msys2_ucrt64_on_non_win_multi.yaml
@@ -8,6 +8,9 @@ requirements:
     - msys2-posix
     - ucrt64-gcc-toolchain
     - ucrt64-xz  # [win]
+    - posix
+    - m2-patch
+    - m2w64-toolchain
 
 outputs:
   - name: output1
@@ -17,6 +20,9 @@ outputs:
         - msys2-posix
         - ucrt64-gcc-toolchain  # [win]
         - ucrt64-xz  # [win]
+        - posix
+        - m2-patch
+        - m2w64-toolchain
   - name: output2
     requirements:
       build:
@@ -24,3 +30,6 @@ outputs:
         - msys2-posix # [win]
         - ucrt64-gcc-toolchain  # [win]
         - ucrt64-xz  # [win]
+        - posix
+        - m2-patch
+        - m2w64-toolchain
